--- a/matrix/static/matrix/css/base.css
+++ b/matrix/static/matrix/css/base.css
@@ -1,17 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
-
-body {
-    text-align: center;
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
-table {
-    margin: 0 auto;
-}
-
-form {
+form.form_no_margin {
     margin: 0;
 }
