--- a/matrix/templates/matrix/login.html
+++ b/matrix/templates/matrix/login.html
@@ -2,9 +2,13 @@
 {% load static %}
 
 {% block content %}
-    {% if user.is_authenticated %}
-        <a class="btn link-authenticated" href="#">Rejoindre les salons Matrix</a>
-    {% else %}
-        <a href="{% url 'social:begin' 'google-oauth2' %}?next={% url 'matrix:join' %}" class="btn btn-google">Se connecter avec GSuite</a>
-    {% endif %}
+    <div class="text-center">
+        <img src="https://prologin.org/static/img/logo_cube.png" alt="Prologin Logo">
+        <h1 class="display-4">Prologin Matrix Onboarding</h1>
+        {% if user.is_authenticated %}
+            <a class="btn btn-primary" href="{% url 'matrix:join' %}">Rejoindre les salons Matrix</a>
+        {% else %}
+            <a href="{% url 'social:begin' 'google-oauth2' %}?next={% url 'matrix:join' %}" class="btn btn-primary">Se connecter avec GSuite</a>
+        {% endif %}
+    </div>
 {% endblock %}
